manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: js-converged-media-service
  labels:
    name: js-converged-media-service
